{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 625,
  "lineage": "b4b5f926-60e2-abe5-6021-8ca21d747e55",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "central_private_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].central",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c00c714c7f84b49d",
            "arn": "arn:aws:ec2:ca-central-1:452413083371:instance/i-0898b9871a99eb8ad",
            "associate_public_ip_address": false,
            "availability_zone": "ca-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0898b9871a99eb8ad",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01d848da2f4b3ee83",
            "private_dns": "ip-10-0-2-252.ca-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.252",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a7fd039c8fbf3bc9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04865912f458bfb59",
            "tags": {
              "Environment": "Dev/Test",
              "Name": "OpenText Central Private Instance"
            },
            "tags_all": {
              "Environment": "Dev/Test",
              "Name": "OpenText Central Private Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06af3f413208780f0"
            ]
          },
          "dependencies": [
            "aws_security_group.central_private_sg",
            "aws_security_group.central_web_sg",
            "aws_subnet.central_private_subnet",
            "aws_vpc.central_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "central_web_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].central",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c00c714c7f84b49d",
            "arn": "arn:aws:ec2:ca-central-1:452413083371:instance/i-0e062107f0248f840",
            "associate_public_ip_address": true,
            "availability_zone": "ca-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e062107f0248f840",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-019a13582a3ff9498",
            "private_dns": "ip-10-0-1-238.ca-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.238",
            "public_ip": "3.96.199.240",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05531baa2a7a63682",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0342c748856a427da",
            "tags": {
              "Environment": "Dev/Test",
              "Name": "OpenText Central Apache-1"
            },
            "tags_all": {
              "Environment": "Dev/Test",
              "Name": "OpenText Central Apache-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ae6d18ea21c25566"
            ]
          },
          "dependencies": [
            "aws_security_group.central_web_sg",
            "aws_subnet.central_public_subnet",
            "aws_vpc.central_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "west_private_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0353faff0d421c70e",
            "arn": "arn:aws:ec2:us-west-1:452413083371:instance/i-0f25ab78743e6eb5c",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f25ab78743e6eb5c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0abb2ce42edca351b",
            "private_dns": "ip-10-1-2-250.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.2.250",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0eea3c629ee57ee1a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00cd8a257f44d5db2",
            "tags": {
              "Environment": "Dev/Test",
              "Name": "OpenText West Private Instance"
            },
            "tags_all": {
              "Environment": "Dev/Test",
              "Name": "OpenText West Private Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-057a98650990470b9"
            ]
          },
          "dependencies": [
            "aws_security_group.west_private_sg",
            "aws_security_group.west_web_sg",
            "aws_subnet.west_private_subnet",
            "aws_vpc.west_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "west_web_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0353faff0d421c70e",
            "arn": "arn:aws:ec2:us-west-1:452413083371:instance/i-0ea57a7cc0912fcc8",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ea57a7cc0912fcc8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03253081574c09c54",
            "private_dns": "ip-10-1-1-201.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.201",
            "public_ip": "3.101.132.89",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00b6196540ec49360",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06856d19fed1fadb8",
            "tags": {
              "Environment": "Dev/Test",
              "Name": "OpenText West NGINX-1"
            },
            "tags_all": {
              "Environment": "Dev/Test",
              "Name": "OpenText West NGINX-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08b17c8678ac29ddd"
            ]
          },
          "dependencies": [
            "aws_security_group.west_web_sg",
            "aws_subnet.west_public_subnet",
            "aws_vpc.west_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "central_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].central",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:452413083371:internet-gateway/igw-05d66e219e5de6061",
            "id": "igw-05d66e219e5de6061",
            "owner_id": "452413083371",
            "tags": {
              "Environment": "Dev/Test",
              "Name": "OpenText Central Internet Gateway"
            },
            "tags_all": {
              "Environment": "Dev/Test",
              "Name": "OpenText Central Internet Gateway"
            },
            "vpc_id": "vpc-0fe24cca29d3cf00e"
          },
          "dependencies": [
            "aws_subnet.central_public_subnet",
            "aws_vpc.central_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "west_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:452413083371:internet-gateway/igw-0d273bd01570d3c13",
            "id": "igw-0d273bd01570d3c13",
            "owner_id": "452413083371",
            "tags": {
              "Environment": "Dev/Test",
              "Name": "OpenText West Internet Gateway"
            },
            "tags_all": {
              "Environment": "Dev/Test",
              "Name": "OpenText West Internet Gateway"
            },
            "vpc_id": "vpc-001a9061057ac9efd"
          },
          "dependencies": [
            "aws_subnet.west_public_subnet",
            "aws_vpc.west_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "central_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].central",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:452413083371:network-acl/acl-0d1d3ce29eebf39d7",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 65535
              }
            ],
            "id": "acl-0d1d3ce29eebf39d7",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "452413083371",
            "subnet_ids": [],
            "tags": {
              "Environment": "Dev/Test",
              "Name": "OpenText Central NACL"
            },
            "tags_all": {
              "Environment": "Dev/Test",
              "Name": "OpenText Central NACL"
            },
            "vpc_id": "vpc-0fe24cca29d3cf00e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.central_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "west_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:452413083371:network-acl/acl-085327ec60a8b942c",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 65535
              }
            ],
            "id": "acl-085327ec60a8b942c",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "452413083371",
            "subnet_ids": [],
            "tags": {
              "Environment": "Dev/Test",
              "Name": "OpenText West NACL"
            },
            "tags_all": {
              "Environment": "Dev/Test",
              "Name": "OpenText West NACL"
            },
            "vpc_id": "vpc-001a9061057ac9efd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.west_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "central_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].central",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:452413083371:route-table/rtb-06f7319dafc911c48",
            "id": "rtb-06f7319dafc911c48",
            "owner_id": "452413083371",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05d66e219e5de6061",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05d66e219e5de6061",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Dev/Test",
              "Name": "OpenText Central Route Table"
            },
            "tags_all": {
              "Environment": "Dev/Test",
              "Name": "OpenText Central Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe24cca29d3cf00e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.central_ig",
            "aws_subnet.central_public_subnet",
            "aws_vpc.central_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "west_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:452413083371:route-table/rtb-0abf184993fa0889f",
            "id": "rtb-0abf184993fa0889f",
            "owner_id": "452413083371",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d273bd01570d3c13",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d273bd01570d3c13",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Dev/Test",
              "Name": "OpenText West Route Table"
            },
            "tags_all": {
              "Environment": "Dev/Test",
              "Name": "OpenText West Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-001a9061057ac9efd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.west_ig",
            "aws_subnet.west_public_subnet",
            "aws_vpc.west_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "central_public_1_rt_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].central",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0710bb5f5fa848b1a",
            "route_table_id": "rtb-06f7319dafc911c48",
            "subnet_id": "subnet-0342c748856a427da"
          },
          "dependencies": [
            "aws_internet_gateway.central_ig",
            "aws_route_table.central_public_rt",
            "aws_subnet.central_public_subnet",
            "aws_vpc.central_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "west_public_1_rt_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc90217361201cac",
            "route_table_id": "rtb-0abf184993fa0889f",
            "subnet_id": "subnet-06856d19fed1fadb8"
          },
          "dependencies": [
            "aws_internet_gateway.west_ig",
            "aws_route_table.west_public_rt",
            "aws_subnet.west_public_subnet",
            "aws_vpc.west_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "central_private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].central",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:452413083371:security-group/sg-06af3f413208780f0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06af3f413208780f0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ae6d18ea21c25566"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20251118172203048100000002",
            "name_prefix": "terraform-",
            "owner_id": "452413083371",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Dev/Test",
              "Name": "OpenText Central Private SG"
            },
            "tags_all": {
              "Environment": "Dev/Test",
              "Name": "OpenText Central Private SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe24cca29d3cf00e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.central_web_sg",
            "aws_vpc.central_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "central_web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].central",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:452413083371:security-group/sg-0ae6d18ea21c25566",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ae6d18ea21c25566",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20251118172200163600000001",
            "name_prefix": "terraform-",
            "owner_id": "452413083371",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Dev/Test",
              "Name": "OpenText Central HTTP"
            },
            "tags_all": {
              "Environment": "Dev/Test",
              "Name": "OpenText Central HTTP"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe24cca29d3cf00e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.central_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "west_private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:452413083371:security-group/sg-057a98650990470b9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-057a98650990470b9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08b17c8678ac29ddd"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20251118172204161500000002",
            "name_prefix": "terraform-",
            "owner_id": "452413083371",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Dev/Test",
              "Name": "OpenText West Private SG"
            },
            "tags_all": {
              "Environment": "Dev/Test",
              "Name": "OpenText West Private SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-001a9061057ac9efd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.west_web_sg",
            "aws_vpc.west_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "west_web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:452413083371:security-group/sg-08b17c8678ac29ddd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08b17c8678ac29ddd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20251118172200858300000001",
            "name_prefix": "terraform-",
            "owner_id": "452413083371",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Dev/Test",
              "Name": "OpenText West HTTP"
            },
            "tags_all": {
              "Environment": "Dev/Test",
              "Name": "OpenText West HTTP"
            },
            "timeouts": null,
            "vpc_id": "vpc-001a9061057ac9efd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.west_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "central_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].central",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:452413083371:subnet/subnet-04865912f458bfb59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04865912f458bfb59",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "452413083371",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev/Test",
              "Name": "OpenText Central Private Subnet"
            },
            "tags_all": {
              "Environment": "Dev/Test",
              "Name": "OpenText Central Private Subnet"
            },
            "vpc_id": "vpc-0fe24cca29d3cf00e"
          },
          "dependencies": [
            "aws_vpc.central_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "central_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].central",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:452413083371:subnet/subnet-0342c748856a427da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0342c748856a427da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "452413083371",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev/Test",
              "Name": "OpenText Central Public Subnet"
            },
            "tags_all": {
              "Environment": "Dev/Test",
              "Name": "OpenText Central Public Subnet"
            },
            "vpc_id": "vpc-0fe24cca29d3cf00e"
          },
          "dependencies": [
            "aws_vpc.central_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "west_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:452413083371:subnet/subnet-00cd8a257f44d5db2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00cd8a257f44d5db2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "452413083371",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev/Test",
              "Name": "OpenText West Private Subnet"
            },
            "tags_all": {
              "Environment": "Dev/Test",
              "Name": "OpenText West Private Subnet"
            },
            "vpc_id": "vpc-001a9061057ac9efd"
          },
          "dependencies": [
            "aws_vpc.west_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "west_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:452413083371:subnet/subnet-06856d19fed1fadb8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06856d19fed1fadb8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "452413083371",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev/Test",
              "Name": "OpenText West Public Subnet"
            },
            "tags_all": {
              "Environment": "Dev/Test",
              "Name": "OpenText West Public Subnet"
            },
            "vpc_id": "vpc-001a9061057ac9efd"
          },
          "dependencies": [
            "aws_vpc.west_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "central_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].central",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:452413083371:vpc/vpc-0fe24cca29d3cf00e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04fd3e906a0acf17a",
            "default_route_table_id": "rtb-0b685d51024203fe4",
            "default_security_group_id": "sg-095bd973f57893813",
            "dhcp_options_id": "dopt-07b627eba97cb3f4e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fe24cca29d3cf00e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b685d51024203fe4",
            "owner_id": "452413083371",
            "tags": {
              "Environment": "Dev/Test",
              "Name": "OpenText Central VPC"
            },
            "tags_all": {
              "Environment": "Dev/Test",
              "Name": "OpenText Central VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "west_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:452413083371:vpc/vpc-001a9061057ac9efd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-052865994f1d1ca7d",
            "default_route_table_id": "rtb-094f5c96ea8e65a74",
            "default_security_group_id": "sg-01825178862360c7d",
            "dhcp_options_id": "dopt-0e6b65229bc7ed800",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-001a9061057ac9efd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-094f5c96ea8e65a74",
            "owner_id": "452413083371",
            "tags": {
              "Environment": "Dev/Test",
              "Name": "OpenText West VPC"
            },
            "tags_all": {
              "Environment": "Dev/Test",
              "Name": "OpenText West VPC"
            }
          }
        }
      ]
    }
  ]
}